--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div id="content">
       <h1>
         Coronavirus <br />
-        disease <br />
+        Disease <br />
         2019
       </h1>
       <p>
